Prevent font shifts on navigation

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,16 +37,15 @@ html {
     font-size: 1rem;
     line-height: 1;
     font-family:
-        "Twemoji Country Flags",
         "Quicksand",
         -apple-system,
         BlinkMacSystemFont,
+        sans-serif,
         "Segoe UI",
         Ubuntu,
         Roboto,
         Helvetica,
-        Arial,
-        sans-serif;
+        Arial;
     scroll-behavior: smooth;
     scrollbar-gutter: stable;
 }
@@ -103,206 +102,6 @@ p {
 
 .text-accent {
     color: rgba(var(--accent), 1);
-}
-
-.post-md {
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        margin-bottom: 1.2rem;
-        margin-top: 1.2rem;
-    }
-
-    strong {
-        font-weight: 600;
-    }
-
-    em {
-        font-style: italic;
-    }
-
-    del {
-        text-decoration: line-through;
-    }
-
-    blockquote {
-        border-left-width: 0.25rem;
-        border-left-color: #374151;
-        border-left-style: solid;
-        quotes: "\201c" "\201d" "\2018" "\2019";
-        margin-top: 1.6rem;
-        margin-bottom: 1.6rem;
-        padding-left: 1rem;
-
-        p {
-            font-weight: 500;
-            font-style: italic;
-            color: var(--body-color);
-        }
-    }
-
-    hr {
-        border-color: #374151;
-        border-top-width: 1px;
-        border-top-style: solid;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-    }
-
-    ol {
-        list-style-type: decimal;
-        padding-left: 1.625rem;
-        color: #d1d5db;
-
-        > li {
-            margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
-        }
-    }
-
-    ul {
-        list-style-type: disc;
-        padding-left: 1.625em;
-        color: #d1d5db;
-
-        li {
-            color: #d1d5db;
-            margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
-
-            &::marker {
-                color: #4b5563;
-            }
-        }
-    }
-
-    p {
-        color: #d1d5db;
-        margin-top: 1.25rem;
-        margin-bottom: 1.25rem;
-    }
-
-    p:first-child {
-        margin-top: 0rem;
-    }
-
-    p {
-        line-height: 1.5;
-    }
-
-    img {
-        height: auto;
-        object-fit: scale-down;
-        border-radius: 6px;
-        box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
-        overflow: hidden;
-    }
-
-    table {
-        width: 100%;
-        table-layout: auto;
-        text-align: left;
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        font-size: 0.8em;
-        line-height: 1.7;
-
-        thead {
-            border-bottom-width: 1px;
-            border-bottom-style: solid;
-            border-bottom-color: #4b5563;
-        }
-
-        th {
-            color: var(--body-color);
-            font-weight: 600;
-            vertical-align: bottom;
-            padding-right: 0.5rem;
-            padding-bottom: 0.5rem;
-            padding-left: 0.5rem;
-
-            &:first-child {
-                padding-left: 0;
-            }
-
-            &:last-child {
-                padding-right: 0;
-            }
-        }
-
-        tbody {
-            tr {
-                border-bottom-width: 1px;
-                border-bottom-style: solid;
-                border-bottom-color: #4b5563;
-
-                &:last-child {
-                    border-bottom-width: 0;
-                }
-            }
-        }
-    }
-
-    pre {
-        overflow-x: auto;
-        font-weight: 400;
-        font-size: 0.875em;
-        line-height: 1.7;
-        margin-top: 1.71;
-        margin-bottom: 1.7;
-        border-radius: 6px;
-        padding: 0.8rem 1.5rem;
-    }
-}
-
-.button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: inherit;
-    background-color: var(--card-bg);
-    color: var(--button-color);
-    text-transform: uppercase;
-    font-weight: 900;
-    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 6px;
-    padding: 15px 25px;
-    text-align: center;
-    border: 2px solid rgba(var(--accent), 1);
-    font-size: 1rem;
-    transition: 300ms;
-    min-width: 120px;
-    height: min-content;
-}
-
-.button a {
-    color: inherit;
-}
-
-.button a:hover {
-    text-decoration: none;
-    color: #0000;
-}
-
-.button:hover {
-    background-color: rgba(var(--accent), 1);
-    color: var(--button-hover-color);
-    cursor: pointer;
-}
-
-a {
-    color: var(--a-color);
-
-    &:visited {
-        color: var(--a-visited);
-    }
-
-    &:hover {
-        text-decoration: underline;
-        text-decoration-color: inherit;
-    }
 }
 
 .dropdown-content {
